trustfall_core/test_data/tests/valid_queries/recurse_directive.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(max: 3) {
        value @output
        successor @recurse(depth: 3) {
            next: value @output
        }
    }
}"#,
    arguments: {},
)
