trustfall_core/test_data/tests/parse_errors/directive_before_root.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
query @output {
    Number(max: 5) {
        value @output
    }
}"#,
    arguments: {},
)
